--- a/wallet/core/templates/core/singlepage.html
+++ b/wallet/core/templates/core/singlepage.html
@@ -26,7 +26,7 @@
   <div class="row">
     <div class="col-md-6">
       <h3>Your Wallet</h3>
-      <p>Address: <strong>{{ user.wallet.address }}</strong></p>
+      <p class='text-break'>Address: <strong style='overflow-wrap: break-word' class='text-break'>{{ user.wallet.address }}</strong></p>
 
       <p>You have <strong>{{ user.balance }}</strong> ETH</p>
 
@@ -51,36 +51,38 @@
     <div class="col-md-12">
       <h3>Your transactions</h3>
       {% if transactions %}
-      <table class="table">
-        <thead>
-          <th>Transaction Hash</th>
-          <th>Status</th>
-          <th>Recipient</th>
-          <th>Amount</th>
-          <th></th>
-        </thead>
-        <tbody class='table-striped'>
-          {% for tx in transactions %}
-          <tr>
-            <td><a href="https://ropsten.etherscan.io/tx/{{ tx.tx.txhash }}">{{tx.short_hash}}</a><span class="muted">...</span></td>
-            <td>
-              <button class='btn btn-outline-{{ tx.button_class }}'>
-                {{ tx.tx.status }}
-              </button>
-            </td>
-            <td><a href="https://ropsten.etherscan.io/address/{{ tx.recipient }}">{{ tx.short_recipient }}</a><span class="muted">...</span></td>
-            <td>{{ tx.formatted_amount }}</td>
-            <td>
-              {% if tx.incoming %}
-                <button class="btn btn-success">IN</button>
-              {% else %}
-                <button class="btn btn-warning">OUT</button>
-              {% endif %}
-            </td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
+      <div class="table-responsive">
+        <table class="table">
+          <thead>
+            <th>Transaction Hash</th>
+            <th>Status</th>
+            <th>Recipient</th>
+            <th>Amount</th>
+            <th></th>
+          </thead>
+          <tbody class='table-striped'>
+            {% for tx in transactions %}
+            <tr>
+              <td><a href="https://ropsten.etherscan.io/tx/{{ tx.tx.txhash }}">{{tx.short_hash}}</a><span class="muted">...</span></td>
+              <td>
+                <button class='btn btn-outline-{{ tx.button_class }}'>
+                  {{ tx.tx.status }}
+                </button>
+              </td>
+              <td><a href="https://ropsten.etherscan.io/address/{{ tx.recipient }}">{{ tx.short_recipient }}</a><span class="muted">...</span></td>
+              <td>{{ tx.formatted_amount }}</td>
+              <td>
+                {% if tx.incoming %}
+                  <button class="btn btn-success">IN</button>
+                {% else %}
+                  <button class="btn btn-warning">OUT</button>
+                {% endif %}
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
       {% else %}
       You have not sent or received any ETH yet.
       {% endif %}
