--- a/wallet/core/templates/core/singlepage.html
+++ b/wallet/core/templates/core/singlepage.html
@@ -32,7 +32,7 @@
 
       <p>
         Note that this wallet uses Ethereum Ropsten testnet, you can get
-        some by going to the <a target="_blank" href="https://faucet.upvest.co/ETH">Upvest Faucet</a>
+        some by going to the <a target="_blank" href="https://faucet.examples.upvest.co/ETH">Upvest Faucet</a>
         or the <a href="https://faucet.ropsten.be" target="_blank">public faucet</a>.
       </p>
     </div>
